Make homepage section & create color variable

--- a/app/components/Styles/Header.css
+++ b/app/components/Styles/Header.css
@@ -2,6 +2,8 @@
   margin: 0 290px;
   padding: 27px 20px;
   font-family: var(--font-rubik);
+  position: sticky;
+  z-index: 999;
 }
 
 .navbar-link,
@@ -30,21 +32,15 @@
   align-items: center;
 }
 
-.regis-btn {
-  color: var(--btn-text);
-  background-color: var(--btn);
-  font-weight: 700;
-  width: 125px;
-  height: 49px;
-  padding: 15px 30px;
-  border-radius: 3px;
-  box-shadow: 0 10px 15px 0 rgba(255, 83, 48, 0.35);
-}
-
 .nav-hover {
   transition: color 0.3s ease-in-out;
 }
 
 .nav-hover:hover {
   color: var(--btn);
+}
+
+.regis-btn {
+  width: 125px;
+  height: 49px;
 }
