Make Plan section

--- a/app/components/Styles/BookCar.css
+++ b/app/components/Styles/BookCar.css
@@ -6,7 +6,7 @@ label {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 2rem 15%;
+  padding: 2rem 18rem;
 }
 
 .bookcar-con {
