--- a/app/components/Styles/Cardetail.css
+++ b/app/components/Styles/Cardetail.css
@@ -4,8 +4,8 @@
 
 .pick-container {
   display: flex;
-  justify-content: space-around;
-  height: max-content;
+  justify-content: space-between;
+  padding: 0 300px;
 }
 
 .pick-box {
@@ -19,8 +19,12 @@
 }
 
 .pick-car {
+  width: 100%;
+}
+
+.pick-img {
   width: 50%;
-  height: 50%;
+  margin-top: 25px;
 }
 
 .car-detail-price {
