--- a/app/components/Styles/Cardetail.css
+++ b/app/components/Styles/Cardetail.css
@@ -1,5 +1,14 @@
 .pick-title {
   text-align: center;
+  margin: 0 40rem 3rem;
+}
+
+.pick-title h3 {
+  font-size: 24px;
+}
+
+.pick-title h2 {
+  font-size: 42px;
 }
 
 .pick-container {
@@ -16,6 +25,26 @@
 
 .button {
   border-radius: 0;
+}
+
+.pick-btn {
+  background-color: #e9e9e9;
+  box-shadow: none;
+  transition: background-color 0.3s ease-in-out;
+  font-size: 20px;
+  color: #000;
+  text-align: start;
+}
+
+.pick-btn:hover {
+  background-color: var(--btn);
+  color: var(--btn-text);
+  box-shadow: none;
+}
+
+.active {
+  background-color: var(--btn);
+  color: var(--btn-text);
 }
 
 .pick-car {
