--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@
   --btn-black: #010103;
   --input-border: #ccd7e6;
   --input-text: #ababab;
+  --faq-ans-text: #706f7b;
   --bg-gradient: linear-gradient(
     180deg,
     rgba(248, 248, 248, 1) 35%,
