--- a/app/components/Styles/BookCar.css
+++ b/app/components/Styles/BookCar.css
@@ -6,32 +6,42 @@ label {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 2rem 18rem;
+  padding: 2rem 10rem;
 }
 
 .bookcar-con {
   background-image: url("../../../public/bookcar-bg.png");
   background-color: #fff;
+  width: 100%;
   padding: 40px 45px 50px 55px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
   border-radius: 3px;
-  z-index: 2;
+  display: flex;
+  flex-direction: column;
 }
 
 .bookcar-content {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 2rem;
+}
+
+.submit-con {
   display: flex;
-  justify-content: space-between;
-  align-items: end;
-  flex-wrap: wrap;
-  gap: 1.6rem;
+  align-items: flex-end;
 }
 
 .submit-btn {
-  width: 380px;
-  height: 46px;
+  width: 100%;
   padding: 12px 13px;
 }
 
 .box-form {
   margin-top: 1.6rem;
+}
+
+@media (max-width: 1024px) {
+  .book-section {
+    padding: 2rem 2rem;
+  }
 }
