--- a/app/components/Styles/Hero.css
+++ b/app/components/Styles/Hero.css
@@ -8,6 +8,10 @@
   padding: 10rem 300px;
 }
 
+.hero-content {
+  z-index: 2;
+}
+
 .bg-homepage {
   width: 680px;
   height: 780px;
@@ -46,4 +50,15 @@
 .hero-img {
   width: 100%;
   z-index: 2;
+}
+
+@media (max-width: 1024px) {
+  .hero-con {
+    padding: 20rem 3rem 10rem;
+  }
+
+  .book-ride-btn,
+  .learn-more-btn {
+    padding: 1rem 2rem;
+  }
 }
