--- a/app/components/Styles/FAQ.css
+++ b/app/components/Styles/FAQ.css
@@ -42,6 +42,7 @@
 
 .faq-box {
   box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.1);
+  background-color: #fff;
 }
 
 .question {
@@ -64,6 +65,7 @@
 
 .active-question {
   box-shadow: 0 10px 15px 0 rgba(255, 83, 48, 0.35);
+  z-index: 2;
 }
 
 .active-answer {
@@ -71,4 +73,19 @@
   color: var(--faq-ans-text);
   font-family: var(--font-rubik);
   box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.1);
+}
+
+@media (max-width: 1024px) {
+  .faq-con {
+    padding: 5rem 7rem;
+  }
+
+  .faq-con-title {
+    width: 100%;
+    padding: 0 0 2rem;
+  }
+
+  .faq-con-content {
+    width: 100%;
+  }
 }
