--- a/app/components/Styles/UserReview.css
+++ b/app/components/Styles/UserReview.css
@@ -3,13 +3,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 5rem 0;
+  padding: 5rem 25rem;
   background-color: #f8f8f8;
 }
 
 .user-review-title {
   text-align: center;
-  width: 37%;
+  padding: 0 15rem;
   margin-bottom: 20px;
 }
 
@@ -21,7 +21,6 @@
 .user-review-example {
   display: flex;
   justify-content: space-around;
-  width: 60%;
   gap: 1.6rem;
 }
 
@@ -76,4 +75,14 @@
   width: 5rem;
   border-radius: 100%;
   margin-right: 1.2rem;
+}
+
+@media (max-width: 1024px) {
+  .user-review-con {
+    padding: 5rem 3rem;
+  }
+
+  .user-review-title {
+    padding: 0 5rem;
+  }
 }
