--- a/app/components/Styles/Header.css
+++ b/app/components/Styles/Header.css
@@ -57,8 +57,72 @@
   border: 2px solid #fff;
 }
 
+.navbar-con-mobile,
+.navbar-side {
+  display: none;
+}
+
 @media (max-width: 1024px) {
   .header {
     padding: 1.5rem 1rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    padding: 2rem 3rem;
+  }
+
+  .navbar-con {
+    display: none;
+  }
+
+  .navbar-con-mobile {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .navbar-side {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.2s;
+  }
+
+  .navbar-side-box {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+  }
+
+  .navbar-side-box li {
+    font-family: var(--font-poppins);
+    font-weight: 400;
+    font-size: 24px;
+    width: 100%;
+    padding: 1.5rem 3rem;
+    text-align: center;
+    transition: all 0.6s ease-in-out;
+  }
+
+  .navbar-side-box li:hover {
+    background-color: rgba(185, 185, 185, 0.5);
+  }
+
+  .navbar-side-close-btn {
+    position: absolute;
+    right: 50px;
+    top: 45px;
+  }
+
+  .active-nav {
+    right: 0;
   }
 }
