--- a/app/components/Styles/Header.css
+++ b/app/components/Styles/Header.css
@@ -62,13 +62,19 @@
   display: none;
 }
 
+@media (max-width: 1280px) {
+  .header {
+    padding: 2rem 3rem;
+  }
+}
+
 @media (max-width: 1024px) {
   .header {
     padding: 1.5rem 1rem;
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 820px) {
   .header {
     padding: 2rem 3rem;
   }
@@ -124,5 +130,14 @@
 
   .active-nav {
     right: 0;
+  }
+}
+
+@media (max-width: 390px) {
+  .header {
+    padding: 2rem 1rem;
+  }
+
+  .navbar-con-mobile {
   }
 }
