--- a/app/components/Styles/Hero.css
+++ b/app/components/Styles/Hero.css
@@ -62,3 +62,38 @@
     padding: 1rem 2rem;
   }
 }
+
+@media (max-width: 768px) {
+  .bg-homepage,
+  .hero-img {
+    display: none;
+  }
+
+  .hero-content {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .hero-con {
+    padding: 16rem 5rem;
+  }
+}
+
+@media (max-width: 390px) {
+  .hero-con {
+    padding: 5rem 2rem;
+  }
+
+  .btn-con {
+    flex-direction: column;
+    width: 80%;
+  }
+
+  .book-ride-btn,
+  .learn-more-btn {
+    justify-content: center;
+    gap: 0.5rem;
+  }
+}
