--- a/app/components/Styles/Banner.css
+++ b/app/components/Styles/Banner.css
@@ -36,3 +36,23 @@
     gap: 0.8rem;
   }
 }
+
+@media (max-width: 768px) {
+  .banner-box {
+    padding: 0 2rem;
+  }
+}
+
+@media (max-width: 430px) {
+  .banner-box {
+    padding: 0 1rem;
+  }
+
+  .banner-box h2 {
+    font-size: 42px;
+  }
+
+  .banner-box p {
+    font-size: 20px;
+  }
+}
