--- a/app/components/Styles/Footer.css
+++ b/app/components/Styles/Footer.css
@@ -78,3 +78,14 @@
     width: 100%;
   }
 }
+
+@media (max-width: 430px) {
+  .footer-con {
+    padding: 5rem 1.5rem;
+  }
+
+  .footer-con-box {
+    display: flex;
+    flex-direction: column;
+  }
+}
