--- a/app/Home/Styles/CarDetail.css
+++ b/app/Home/Styles/CarDetail.css
@@ -1,50 +1,40 @@
 .car-detail-con {
-  width: 100%;
-  padding: 5rem 20rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5rem 0;
+  background-color: #fff;
 }
 
 .pick-title {
   text-align: center;
-  padding: 0 35%;
-}
-
-.pick-title h3 {
-  font-size: 24px;
-}
-
-.pick-title h2 {
-  font-size: 42px;
 }
 
 .pick-container {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  width: 100%;
+  padding: 3rem 15rem;
 }
 
 .pick-box {
   display: flex;
   flex-direction: column;
-  gap: 0.8rem;
+  gap: 0.5rem;
 }
 
-.button {
-  border-radius: 0;
-}
-
-.pick-btn {
-  background-color: #e9e9e9;
+.pick-car-btn {
+  background-color: var(--btn-gray);
   box-shadow: none;
-  transition: background-color 0.3s ease-in-out;
-  font-size: 20px;
-  color: #000;
+  transition: all 0.2s ease;
   text-align: start;
+  color: var(--text-black);
+  font-size: 20px;
 }
 
-.pick-btn:hover {
-  background-color: var(--btn);
-  color: var(--btn-text);
+.pick-car-btn:hover {
   box-shadow: none;
+  background-color: var(--btn);
 }
 
 .active {
@@ -52,73 +42,85 @@
   color: var(--btn-text);
 }
 
+.pick-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40%;
+}
+
 .pick-car {
   width: 100%;
 }
 
-.pick-img {
-  width: 50%;
+.pick-detail {
+  text-align: center;
+  width: 20%;
+  padding: 0;
 }
 
 .car-detail-price {
   background-color: var(--btn);
   color: var(--btn-text);
-  font-size: 18px;
+  padding: 0.2rem 0;
   display: flex;
   align-items: center;
-  padding: 3px 19px;
+  justify-content: center;
+  gap: 0.6rem;
 }
 
 .car-detail-price span:first-child {
-  font-weight: 700;
   font-size: 28px;
+  font-weight: 600;
+}
+
+.car-detail-price span:nth-child(2) {
+  font-size: 18px;
+}
+
+.car-detail-col {
+  border-bottom: 2px solid var(--text-gray);
+  border-left: 2px solid var(--text-gray);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 0.5rem 0.3rem;
+}
+
+.car-detail-col span {
+  font-size: 14px;
+}
+
+.car-detail-col span:first-child,
+.car-detail-col {
+  border-right: 2px solid var(--text-gray);
+}
+
+.btn-box {
+  width: 100%;
+  height: 5rem;
+  display: flex;
+  align-items: center;
 }
 
 .cta-btn {
   background-color: var(--btn);
-  text-align: center;
   width: 100%;
-  padding: 10px;
+  padding: 0.5rem 0;
+  text-align: center;
   font-weight: 700;
   font-size: 1.3rem;
   color: var(--btn-text);
   box-shadow: 8px 8px 1px rgba(0, 0, 0, 0.1);
   transition: background-color 0.3s ease-in-out;
-  margin-top: 10px;
 }
 
 .cta-btn:hover {
   background-color: #e9381d;
 }
 
-.car-detail-col {
-  border: 1px solid;
-  padding: 9px 5px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-row: auto;
-  text-align: center;
-  font-size: 14px;
-  border-top: 0;
-}
-
-.car-detail-col span:first-child {
-  border-right: 1px solid;
-}
-
-.btn-box {
-  display: flex;
-}
-
-@media (max-width: 1440px) {
-  .car-detail-con {
-    padding: 5rem 3rem;
-  }
-}
-
-@media (max-width: 1024px) {
-  .pick-title {
-    padding: 0 10rem;
+@media (max-width: 1280px) {
+  .pick-container {
+    flex-wrap: wrap;
   }
 
   #item-1 {
@@ -131,21 +133,36 @@
     order: 3;
   }
 
-  .pick-container {
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 3rem 0;
-  }
-
   .pick-img {
-    padding: 0 5rem;
     width: 100%;
+    padding: 0 12rem;
   }
 
   .pick-box,
   .pick-detail {
     padding: 2rem 3rem;
     width: 50%;
+  }
+}
+
+@media (max-width: 1024px) {
+  .pick-container {
+    padding: 5rem 10rem;
+  }
+
+  .pick-img {
+    padding: 0 5rem;
+  }
+
+  .pick-box,
+  .pick-detail {
+    padding: 2rem 0.5rem;
+  }
+}
+
+@media (max-width: 1024px) {
+  .pick-container {
+    padding: 5rem 3rem;
   }
 }
 
