--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,7 @@
   --input-border: #ccd7e6;
   --input-text: #ababab;
   --faq-ans-text: #706f7b;
+  --btn-gray: #e9e9e9;
   --bg-gray: #f8f8f8;
   --bg-gradient: linear-gradient(
     180deg,
