--- a/app/components/Styles/Header.css
+++ b/app/components/Styles/Header.css
@@ -72,11 +72,10 @@
   .header {
     padding: 1.5rem 1rem;
   }
-}
 
-@media (max-width: 820px) {
-  .header {
-    padding: 2rem 3rem;
+  .mobile-hamburger,
+  .navbar-side-close-btn {
+    cursor: pointer;
   }
 
   .navbar-con {
@@ -124,7 +123,7 @@
 
   .navbar-side-close-btn {
     position: absolute;
-    right: 50px;
+    right: 30px;
     top: 45px;
   }
 
@@ -136,8 +135,5 @@
 @media (max-width: 390px) {
   .header {
     padding: 2rem 1rem;
-  }
-
-  .navbar-con-mobile {
   }
 }
