--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,8 @@
   --faq-ans-text: #706f7b;
   --btn-gray: #e9e9e9;
   --bg-gray: #f8f8f8;
+  --bg-gray-db: #dbdbdb;
+  --text-gray-info: #555;
   --bg-gradient: linear-gradient(
     180deg,
     rgba(248, 248, 248, 1) 35%,
@@ -52,7 +54,6 @@ p {
   font-family: var(--font-rubik);
   font-size: 16px;
   color: #706f7b;
-  margin-bottom: 40px;
 }
 
 b {
@@ -68,6 +69,7 @@ input {
   color: var(--input-text);
   font-weight: 400;
   font-size: 0.8rem;
+  outline: none;
 }
 
 label {
