--- a/app/Home/Styles/FAQ.css
+++ b/app/Home/Styles/FAQ.css
@@ -13,6 +13,10 @@
   padding: 5rem;
 }
 
+.faq-con-title p {
+  margin-bottom: 5rem;
+}
+
 .faq-con-title {
   text-align: center;
   width: 40%;
@@ -28,21 +32,9 @@
   margin-bottom: 10px;
 }
 
-.faq-con-content {
-  display: flex;
-  flex-direction: column;
-  width: 45%;
-}
-
-.faq-box div p {
-  margin-bottom: 0;
-  font-size: 18px;
-  font-weight: 500;
-}
-
-.faq-box {
-  box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.1);
-  background-color: #fff;
+.faq-con-container {
+  width: 100%;
+  padding: 0 25rem;
 }
 
 .question {
@@ -55,6 +47,7 @@
   z-index: 2;
   cursor: pointer;
   font-weight: 500;
+  transition: all 0.4s ease;
 }
 
 .question p {
@@ -63,9 +56,18 @@
   margin: 0;
 }
 
+.question b {
+  color: var(--text-black);
+}
+
 .question p,
-.active {
-  transition: background-color 0.6s ease;
+.active,
+.question b {
+  transition: all 0.4s ease;
+}
+
+.active b {
+  color: #fff;
 }
 
 .question span {
@@ -77,21 +79,18 @@
 }
 
 .answer {
-  display: none;
+  font-family: var(--font-rubik);
+  line-height: 2rem;
+  color: var(--text-gray);
   background-color: #fff;
   box-shadow: 0 1px 2px 2px rgba(0, 0, 0, 0.1);
-  transition: all 0.5s cubic-bezier(0, 1, 0, 1);
+  transition: all 0.4s ease;
+  padding: 0rem 3rem;
 }
 
-.answer.show {
-  display: block;
-  padding: 2rem 3rem;
-  transition: all 0.1s cubic-bezier((1, 0, 1, 0));
-}
-
-.answer p {
-  font-family: var(--font-rubik);
-  margin: 0;
+.show {
+  padding: 2rem 2rem;
+  transition: all 0.4s ease;
 }
 
 @media (max-width: 1024px) {
