--- a/app/Home/Styles/FAQ.css
+++ b/app/Home/Styles/FAQ.css
@@ -37,6 +37,10 @@
   padding: 0 20%;
 }
 
+.faq-con-content {
+  background-color: #fff;
+}
+
 .question {
   display: flex;
   justify-content: space-between;
@@ -60,22 +64,10 @@
   color: var(--text-black);
 }
 
-.question p,
-.active,
-.question b {
-  transition: all 0.4s ease;
-}
-
-.active b {
-  color: #fff;
-}
-
-.question span {
-  font-size: 20px;
-}
-
 .active {
   background-color: var(--btn);
+  box-shadow: 0 10px 15px 0 rgba(255, 83, 48, 0.35);
+  color: #fff;
 }
 
 .answer {
@@ -91,6 +83,7 @@
 .show {
   padding: 2rem 2rem;
   transition: all 0.4s ease;
+  background-color: transparent;
 }
 
 @media (max-width: 1024px) {
@@ -111,6 +104,10 @@
 @media (max-width: 768px) {
   .faq-con {
     padding: 5rem 1.5rem;
+  }
+
+  .faq-con-container {
+    padding: 0 5rem;
   }
 }
 
