--- a/app/components/Styles/Header.css
+++ b/app/components/Styles/Header.css
@@ -96,6 +96,9 @@
   .navbar-con {
     padding: 2rem 10%;
   }
+  s .navbar-con-title {
+    padding: 2rem 9rem;
+  }
 }
 
 @media (max-width: 1024px) {
@@ -120,7 +123,12 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    flex-direction: column;
     padding: 2rem;
+  }
+
+  .navbar-con-title {
+    padding: 0 0 3rem;
   }
 
   .navbar-side {
