style (Header, AboutPage): change mistake that make Header in homepage doesn't have padding, change style for support responsive in Hero on AboutPage

--- a/app/components/Styles/Header.css
+++ b/app/components/Styles/Header.css
@@ -32,6 +32,10 @@
   gap: 5rem;
 }
 
+.navbar-home {
+  padding: 2rem 3rem;
+}
+
 .navbar-con {
   align-items: center;
   justify-content: space-between;
