--- a/app/pages/about/style.css
+++ b/app/pages/about/style.css
@@ -1,19 +1,21 @@
 .hero {
-  padding: 5rem 10rem;
   display: flex;
   justify-content: center;
+  padding: 5rem 0;
 }
 
 .hero-container {
   color: var(--btn-black);
   display: flex;
-  width: 80rem;
-  max-width: 90%;
+  width: 60%;
   gap: 2rem;
-}
-& h2 {
-  font-family: var(--font-rubik);
-  font-weight: 500;
+  & h2 {
+    font-family: var(--font-rubik);
+    font-weight: 500;
+  }
+  & h1 {
+    font-size: 2rem;
+  }
 }
 
 .hero-container-box {
@@ -28,17 +30,17 @@
   display: flex;
   margin-top: 1rem;
   gap: 0.8rem;
-}
-& h2 {
-  font-size: 3rem;
+  & h2 {
+    font-size: 3rem;
+  }
 }
 
 @media (max-width: 1024px) {
   .hero-container {
     flex-direction: column;
-  }
-  & div {
-    text-align: center;
+    & div {
+      text-align: center;
+    }
   }
 
   .hero-container-box {
@@ -53,9 +55,9 @@
 
   .hero-container h2 {
     font-size: 1.5rem;
-  }
-  & h1 {
-    font-size: 2rem;
+    & h1 {
+      font-size: 2rem;
+    }
   }
 
   .hero-container-box {
