--- a/app/pages/contact/style.css
+++ b/app/pages/contact/style.css
@@ -12,11 +12,11 @@
   }
 }
 
-label {
+.contact-form label {
   margin: 0;
 }
 
-input,
+.contact-form input,
 textarea {
   background-color: #f2f2f2;
   border: none;
