--- a/app/globals.css
+++ b/app/globals.css
@@ -75,6 +75,11 @@ input {
   -webkit-appearance: none;
 }
 
+input[type="checkbox"],
+[type="time"] {
+  appearance: auto;
+}
+
 label {
   font-weight: 600;
   gap: 0.2rem;
